Agregado de historial , modificacion de login
